==> qmk/ChibiOS-Contrib/os/hal/ports/WB32/LLD/I2Cv1/hal_i2c_lld.c <==
#include "hal.h"
#define I2C1_RX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C1_RX_DMA_STREAM, \
                      WB32_I2C1_RX_DMA_CHN)
#define I2C1_TX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C1_TX_DMA_STREAM, \
                      WB32_I2C1_TX_DMA_CHN)
#define I2C2_RX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C2_RX_DMA_STREAM, \
                      WB32_I2C2_RX_DMA_CHN)
#define I2C2_TX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C2_TX_DMA_STREAM, \
                      WB32_I2C2_TX_DMA_CHN)
#define I2C3_RX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C3_RX_DMA_STREAM, \
                      WB32_I2C3_RX_DMA_CHN)
#define I2C3_TX_DMA_CHANNEL                        \
  WB32_DMA_GETCHANNEL(WB32_I2C_I2C3_TX_DMA_STREAM, \
                      WB32_I2C3_TX_DMA_CHN)
#define I2C_EV5_MASTER_MODE_SELECT \
  ((uint32_t)(((I2C_SR2_MSL | I2C_SR2_BUSY) << 16) | I2C_SR1_SB))
#define I2C_EV5_MASTER_MODE_SELECT_NO_BUSY \
  ((uint32_t)((I2C_SR2_MSL << 16) | I2C_SR1_SB))
#define I2C_EV6_MASTER_TRA_MODE_SELECTED                           \
  ((uint32_t)(((I2C_SR2_MSL | I2C_SR2_BUSY | I2C_SR2_TRA) << 16) | \
              I2C_SR1_ADDR | I2C_SR1_TXE))
#define I2C_EV6_MASTER_REC_MODE_SELECTED \
  ((uint32_t)(((I2C_SR2_MSL | I2C_SR2_BUSY) << 16) | I2C_SR1_ADDR))

void i2c_lld_init(void)
{

#if WB32_I2C_USE_I2C1
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c = I2C1;
#endif /* WB32_I2C_USE_I2C1 */

#if WB32_I2C_USE_I2C2
  i2cObjectInit(&I2CD2);
  I2CD2.thread = NULL;
  I2CD2.i2c = I2C2;
#endif /* WB32_I2C_USE_I2C2 */
}

void i2c_lld_start(I2CDriver *i2cp)
{
  I2C_TypeDef *dp = i2cp->i2c;

  /* If in stopped state then enables the I2C and DMA clocks.*/
  if (i2cp->state == I2C_STOP)
  {
#if WB32_I2C_USE_I2C1
    if (&I2CD1 == i2cp)
    {
      /* I2C1 clock enable */
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_BMX2 | RCC_APB2Periph_I2C1, ENABLE);

      /* I2C1 DeInit */
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_I2C1, ENABLE);
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_I2C1, DISABLE);

      nvicEnableVector(I2C1_IRQn, WB32_I2C_I2C1_IRQ_PRIORITY);
    }
#endif
#if WB32_I2C_USE_I2C2
    if (&I2CD2 == i2cp)
    {
      /* I2C2 clock enable */
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_BMX2 | RCC_APB2Periph_I2C2, ENABLE);

      RCC_APB2PeriphResetCmd(RCC_APB2Periph_I2C2, ENABLE);
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_I2C2, DISABLE);

      nvicEnableVector(I2C2_IRQn, WB32_I2C_I2C2_IRQ_PRIORITY);
    }
#endif /* WB32_I2C_USE_I2C2 */
  }

  /* Setup I2C parameters.*/
  i2c_lld_configuration(i2cp);
  (void)dp->CLR_INTR;
  dp->INTR_MASK &= ~(0xFFFF);
}

void i2c_lld_stop(I2CDriver *i2cp)
{
  i2cp->g_i2c_xfer_info.tx_len = 0;
  i2cp->g_i2c_xfer_info.rx_len = 0;
  i2cp->g_i2c_xfer_info.tx_buf = NULL;
  i2cp->g_i2c_xfer_info.rx_buf = NULL;
  i2cp->g_i2c_xfer_info.tx_abrt_source = 0;

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP)
  {
    /* I2C disable.*/
    i2c_lld_abort_operation(i2cp);

#if WB32_I2C_USE_I2C1
    if (&I2CD1 == i2cp)
    {
      nvicDisableVector(I2C1_IRQn);
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_I2C1, DISABLE);
    }
#endif

#if WB32_I2C_USE_I2C2
    if (&I2CD2 == i2cp)
    {
      nvicDisableVector(I2C2_IRQn);
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_I2C2, DISABLE);
    }
#endif
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     sysinterval_t timeout)
{
  I2C_TypeDef *dp = i2cp->i2c;
  msg_t msg;

#if defined(WB32F10x_I2C)
 osalDbgCheck(rxbytes > 0);
#endif
  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  i2cp->g_i2c_xfer_info.tx_buf = NULL;
  i2cp->g_i2c_xfer_info.tx_len = 0;

  i2cp->g_i2c_xfer_info.rx_buf = rxbuf;
  i2cp->g_i2c_xfer_info.rx_len = rxbytes;
  i2cp->g_i2c_xfer_info.rx_cmd_len = rxbytes;

  i2cp->g_i2c_xfer_info.tx_abrt_source = 0x00;

  // /* Releases the lock from high level driver.*/
  // osalSysUnlock();

  /* set slave address */
  dp->TAR = (uint32_t) addr; 

  /* Enable I2C.*/
  dp->ENABLE |= I2C_ENABLE_ENABLE;

  /* Clear all I2C interrupt flags */
  (void)dp->CLR_INTR;
  /* Disable all I2C interrupt */
  dp->INTR_MASK &= ~(0xFFFF);
  /* Enable the selected I2C interrupt */
  // dp->INTR_MASK |= (I2C_IT_TX_EMPTY | I2C_IT_TX_ABRT | I2C_IT_STOP_DET | I2C_IT_RX_FULL);  
  dp->INTR_MASK |= (i2cp->config->I2C_IT);

 /* Waits for the operation completion or a timeout.*/
 msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
 if (msg == MSG_OK)
 {
    /* Clear all I2C interrupt flags */
    (void)dp->CLR_INTR;
    /* Disable all I2C interrupt */
    dp->INTR_MASK &= ~(0xFFFF);
    /* Disable I2C */
    dp->ENABLE &= ~I2C_ENABLE_ENABLE;
 }

 return msg;
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      sysinterval_t timeout)
{

  I2C_TypeDef *dp = i2cp->i2c;
  __IO msg_t msg;

#if defined(WB32F10x_I2C)
 osalDbgCheck((rxbytes == 0) || ((rxbytes > 0) && (rxbuf != NULL)));
#endif
  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  i2cp->g_i2c_xfer_info.tx_buf = txbuf;
  i2cp->g_i2c_xfer_info.tx_len = txbytes;

  i2cp->g_i2c_xfer_info.rx_buf = rxbuf;
  i2cp->g_i2c_xfer_info.rx_len = rxbytes;
  i2cp->g_i2c_xfer_info.rx_cmd_len = rxbytes;

  i2cp->g_i2c_xfer_info.tx_abrt_source = 0x00;

  /* set slave address */
  dp->TAR = (uint32_t) addr; 

  /* Enable I2C.*/
  dp->ENABLE |= I2C_ENABLE_ENABLE;

  /* Clear all I2C interrupt flags */
  (void)dp->CLR_INTR;
  /* Disable all I2C interrupt */
  dp->INTR_MASK &= ~(0xFFFF);
  /* Enable the selected I2C interrupt */
  // dp->INTR_MASK |= (I2C_IT_TX_EMPTY | I2C_IT_TX_ABRT | I2C_IT_STOP_DET | I2C_IT_RX_FULL);  
  dp->INTR_MASK |= (i2cp->config->I2C_IT);

   /* Waits for the operation completion or a timeout.*/
   msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
 
  /* Clear all I2C interrupt flags */
  (void)dp->CLR_INTR;
  /* Disable all I2C interrupt */
  dp->INTR_MASK &= ~(0xFFFF);
  /* Disable I2C */
  dp->ENABLE &= ~I2C_ENABLE_ENABLE; 

 return msg;
}
